--- a/result/result_edit.html
+++ b/result/result_edit.html
@@ -32,7 +32,7 @@
         .header {
             background: #ffffff;
             color: #0b1220;
-            padding: 24px 30px;
+            padding: 16px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -62,7 +62,7 @@
         }
 
         .content {
-            padding: 30px;
+            padding: 20px;
         }
 
         .loading {
@@ -74,9 +74,9 @@
 
         .centre-info {
             background: #f8fafc;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 30px;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 20px;
             border: 1px solid #eef2f7;
         }
 
@@ -179,7 +179,7 @@
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 12px;
         }
 
         .form-group label {
@@ -193,10 +193,10 @@
         .form-group select,
         .form-group textarea {
             width: 100%;
-            padding: 12px;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            font-size: 1em;
+            padding: 8px 10px;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-size: 0.95em;
             transition: all 0.3s ease;
         }
 
@@ -215,18 +215,18 @@
 
         .votes-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-bottom: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 12px;
+            margin-bottom: 15px;
         }
 
         .total-display {
             background: #f0f9ff;
             border: 2px solid #3b82f6;
-            border-radius: 10px;
-            padding: 20px;
+            border-radius: 8px;
+            padding: 15px;
             text-align: center;
-            margin: 30px 0;
+            margin: 15px 0;
         }
 
         .total-display h3 {
@@ -235,7 +235,7 @@
         }
 
         .total-display .total-value {
-            font-size: 2.5em;
+            font-size: 2em;
             font-weight: 700;
             color: #3b82f6;
         }
@@ -374,11 +374,33 @@
                     <div class="total-display">
                         <h3>Total Counted Votes</h3>
                         <div class="total-value" id="totalCountedVotes">0</div>
-                        <p style="color: #64748b; margin-top: 10px; font-size: 0.9em;">
+                        <p style="color: #64748b; margin-top: 5px; font-size: 0.85em;">
                             (Valid Votes + Invalid Votes)
                         </p>
                     </div>
+                </div>
 
+                <!-- Referendum Votes -->
+                <div class="form-section" style="background: #fef3c7; padding: 15px; border-radius: 8px; border: 2px solid #fbbf24;">
+                    <h3>🗳️ Referendum Votes (গণভোট)</h3>
+                    <div class="votes-grid">
+                        <div class="form-group">
+                            <label for="yes_vote">Yes Vote (হ্যাঁ)</label>
+                            <input type="number" id="yes_vote" name="yes_vote" min="0">
+                        </div>
+                        <div class="form-group">
+                            <label for="no_vote">No Vote (না)</label>
+                            <input type="number" id="no_vote" name="no_vote" min="0">
+                        </div>
+                        <div class="form-group">
+                            <label for="rejected_gonovote">Rejected Gonovote</label>
+                            <input type="number" id="rejected_gonovote" name="rejected_gonovote" min="0">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Comments -->
+                <div class="form-section">
                     <div class="form-group">
                         <label for="s_comment">Comments (Optional)</label>
                         <textarea id="s_comment" name="s_comment" rows="3" placeholder="Enter any comments..."></textarea>
@@ -535,6 +557,9 @@
             document.getElementById('valid_votes').value = result.valid_counted_vote || 0;
             document.getElementById('invalid_votes').value = result.invalid_counted_vote || 0;
             document.getElementById('tendered_votes').value = result.tenderd_counted_vote || 0;
+            document.getElementById('yes_vote').value = result.yes_vote || 0;
+            document.getElementById('no_vote').value = result.no_vote || 0;
+            document.getElementById('rejected_gonovote').value = result.rejected_gonovote || 0;
             document.getElementById('s_comment').value = result.s_comment || '';
 
             // Calculate and display total
@@ -588,6 +613,9 @@
             updateData.valid_counted_vote = parseFloat(formData.get('valid_counted_vote')) || 0;
             updateData.invalid_counted_vote = parseFloat(formData.get('invalid_counted_vote')) || 0;
             updateData.tenderd_counted_vote = formData.get('tenderd_counted_vote') || null;
+            updateData.yes_vote = formData.get('yes_vote') ? parseFloat(formData.get('yes_vote')) : null;
+            updateData.no_vote = formData.get('no_vote') ? parseFloat(formData.get('no_vote')) : null;
+            updateData.rejected_gonovote = formData.get('rejected_gonovote') ? parseFloat(formData.get('rejected_gonovote')) : null;
             updateData.s_comment = formData.get('s_comment') || null;
 
             try {
