--- a/dashboard.html
+++ b/dashboard.html
@@ -591,6 +591,10 @@
 						<span>Combine Result</span>	
 					</a>
 					
+					<a class="button primary" href="result/agent_list.html" title="Duty Finding">
+						<span class="icon">🔎</span>
+						<span>Agent List</span>	
+					</a>
 					
 				</div>
 		</div> 
