--- a/dashboard.html
+++ b/dashboard.html
@@ -596,6 +596,10 @@
 						<span>Agent List</span>	
 					</a>
 					
+					<a class="button primary" href="result/result_billboard.html" title="Duty Finding">
+						<span class="icon">🔎</span>
+						<span>Result Billboard</span>	
+					</a>
 				</div>
 		</div> 
 		</div>
