--- a/result/result_billboard.html
+++ b/result/result_billboard.html
@@ -74,17 +74,6 @@
             color: #0b1220;
         }
 
-        .controls {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: #fff;
-            padding: 15px 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-
         .btn {
             padding: 10px 20px;
             border: none;
@@ -130,11 +119,28 @@
             display: flex;
             align-items: center;
             gap: 10px;
+            justify-content: center;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background: #f0f9ff;
+            border-radius: 8px;
+            border: 2px solid #3b82f6;
         }
 
         .auto-refresh label {
             font-weight: 600;
-            color: #475569;
+            color: #0b1220;
+        }
+
+        .auto-refresh input[type="checkbox"] {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
+
+        .auto-refresh span {
+            color: #3b82f6;
+            font-weight: 600;
         }
 
         .loading {
@@ -146,8 +152,8 @@
 
         .candidates-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(6, 1fr);
+            gap: 15px;
             margin-bottom: 30px;
         }
 
@@ -336,15 +342,33 @@
             }
         }
 
+        @media (max-width: 1400px) {
+            .candidates-grid {
+                grid-template-columns: repeat(4, 1fr);
+            }
+        }
+
+        @media (max-width: 1024px) {
+            .candidates-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
         @media (max-width: 768px) {
             .header h1 {
                 font-size: 1.8em;
             }
             .candidates-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
             }
             .header .election-info {
                 gap: 15px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .candidates-grid {
+                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -368,16 +392,8 @@
                     <div class="value" id="lastUpdate">-</div>
                 </div>
             </div>
-        </div>
-
-        <div class="controls no-print">
-            <div>
-                <button class="btn btn-primary" onclick="loadResults()">🔄 রিফ্রেশ করুন</button>
-                <button class="btn btn-success" onclick="window.print()">🖨️ প্রিন্ট করুন</button>
-                <a href="result_entry.html" class="btn btn-secondary">← ফিরে যান</a>
-            </div>
             <div class="auto-refresh">
-                <label for="autoRefresh">অটো রিফ্রেশ:</label>
+                <label for="autoRefresh">🔄 অটো রিফ্রেশ:</label>
                 <input type="checkbox" id="autoRefresh" onchange="toggleAutoRefresh()">
                 <span id="refreshTimer"></span>
             </div>
