--- a/dashboard.html
+++ b/dashboard.html
@@ -525,6 +525,10 @@
 						<span class="icon">⏳</span>
 						<span>Duty Not assigned List</span>
 					</a>
+					<a class="button secondary" href="generate/7_assigned_officer_list.html" title="Duty Not assigned List">
+						<span class="icon">⏳</span>
+						<span>Duty List</span>
+					</a>
 					
 				</div>
 			</div>
