--- a/generate/7_assigned_officer_list.html
+++ b/generate/7_assigned_officer_list.html
@@ -15,7 +15,8 @@
         
         body {
             font-family: 'Nikosh', 'SolaimanLipi', Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #f4f6f8; /* light neutral background for white-based design */
+            color: #0f172a;
             min-height: 100vh;
             padding: 10px;
         }
@@ -23,10 +24,11 @@
         .container {
             max-width: 98%;
             margin: 10px auto;
-            background: white;
-            border-radius: 15px;
+            background: #ffffff; /* card-style white */
+            border-radius: 10px;
             padding: 20px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+            box-shadow: 0 4px 10px rgba(15, 23, 42, 0.06);
+            border: 1px solid #e6e9ee;
         }
         
         h1 {
@@ -46,24 +48,31 @@
         }
 
         .stat-card {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 20px;
-            border-radius: 10px;
+            background: #f8fafc;
+            color: #0f172a;
+            padding: 18px;
+            border-radius: 8px;
             text-align: center;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            box-shadow: none;
+            border: 1px solid #e6eef6;
         }
 
         .stat-card.presiding {
-            background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
+            background: #eef9f2;
+            color: #065f46;
+            border-color: #d1fae5;
         }
 
         .stat-card.ass-presiding {
-            background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);
+            background: #fff7ed;
+            color: #92400e;
+            border-color: #ffedd5;
         }
 
         .stat-card.polling {
-            background: linear-gradient(135deg, #f5576c 0%, #d32f2f 100%);
+            background: #fff1f2;
+            color: #7f1d1d;
+            border-color: #fee2e2;
         }
 
         .stat-card h3 {
@@ -200,17 +209,18 @@
         }
 
         .data-table th {
-            background: #667eea;
-            color: white;
+            background: #f1f5f9; /* soft gray header */
+            color: #0f172a;
             padding: 10px 8px;
             text-align: left;
-            font-weight: bold;
+            font-weight: 700;
             position: sticky;
             top: 0;
             z-index: 10;
             font-size: 13px;
             white-space: nowrap;
             font-family: 'Nikosh', 'SolaimanLipi', Arial, sans-serif;
+            border-bottom: 1px solid #e6eef6;
         }
 
         .data-table td {
